[metadata]
name = anydeck
version = 0.1.2
author = Thomas Amore Jr.
description = Generates a deck of virtually any type of cards from which drawing, adding, removing, and shuffling is handled by the module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomamore/aydeck
project_urls =
    Bug Tracker = https://github.com/tomamore/anydeck/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src